修改项目名称，修改接口后缀，菜单修改、权限添加

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.10&key=b547d05d07535668173a50b6d644ffce&plugin=AMap.Autocomplete,AMap.BezierCurveEditor,AMap.ToolBar,AMap.PlaceSearch"></script>
     <script src="//webapi.amap.com/ui/1.0/main.js"></script> -->
-    <title>云PMS</title>
+    <title>全渠道分销后台管理系统</title>
   </head>
   <body>
     <div id="app"></div>
